--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,22 @@
 
+  * { box-sizing: border-box }
 
-.centralizaTexto {
+/* .centralizaTexto {
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+} */
 
 .geral {
   background-color: #ccc;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
