--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,20 +1,30 @@
 .Header {
     width: 100%;
     height: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     background-image: url(./bkgHeader.jpg);
     background-position: center;
+    color: white;
 }
 
 .titulo {
     font-size: 100px;
     margin: 0px;
+    text-shadow: #000 1px 3px 20px;
 }
 
 .subtitulo {
     font-size: 30px;
     margin: 0px;
+    text-shadow: #000 1px 3px 10px;
+}
+
+.layer {
+    background-color:rgba(255, 246, 255, 0.48);
+    /* position: absolute; */
+    width: inherit;
+    height: inherit;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
