--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -1,3 +1,22 @@
 .navbar {
     font-size: 20px;
+    font-family: "Courier New", Courier, monospace;
+    color: #ccc;
+    margin: 10px;
+}
+
+a {
+    color: black;
+    font-weight: bold;
+    margin: 20px;
+}
+a:hover {
+    color: white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #d072bc;    
+    text-decoration: none;
+    text-shadow: #edcbe6 1px 3px 10px;
+    font-size: 21px;
+    
+    
 }
