Termina estilo geral, muda favicon

--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .rodape {
-    background-color: #ccc;
+    background-color: #edcbe6;
     height: 120px;
     display: flex;
     align-items: center;
